--- a/ws/football/src/main/resources/templates/ergebnisse.html
+++ b/ws/football/src/main/resources/templates/ergebnisse.html
@@ -6,11 +6,11 @@
     <title>Ergebnisse</title>
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/ergebnisse.css">
+    <link rel="stylesheet" href="/css/ergebnisse.css">
 </head>
 <body>
     <header class="header">
-        <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
+        <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -40,7 +40,7 @@
                                 <div class="infos-left">
                                     <div class="team1">
                                         <div class="flag">
-                                            <img src="assets/flagge-deutschland.png">
+                                            <img src="/assets/flagge-deutschland.png">
                                         </div>
                                         <div class="team">
                                             <p>Deutschland</p>
@@ -51,7 +51,7 @@
                                 </div>
                                     <div class="team2">
                                         <div class="flag">
-                                            <img src="assets/flagge-schottland.png">
+                                            <img src="/assets/flagge-schottland.png">
                                         </div>
                                         <div class="team">
                                             <p>Schottland</p>
