--- a/ws/football/src/main/resources/templates/forum.html
+++ b/ws/football/src/main/resources/templates/forum.html
@@ -7,12 +7,12 @@
         <title>Forum</title>
         <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/forum.css">
+        <link rel="stylesheet" href="/css/forum.css">
     </head>
 
     <body>
         <header class="header">
-            <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
+            <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
             <input type="checkbox" id="check">
             <label for="check" class="menu">
                 <i class="bx bx-menu" id="icon-menu"></i>
@@ -145,6 +145,6 @@
                     </div>
                 </main>
             </div>     
-            <script src="js/forum.js"></script>
+            <script src="/js/forum.js"></script>
     </body>
     </html>
