--- a/ws/football/src/main/resources/templates/kader.html
+++ b/ws/football/src/main/resources/templates/kader.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/kader.css">
+    <link rel="stylesheet" href="/css/kader.css">
 
   </head>
 
   <body>
     <header class="header">
-        <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
+        <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -445,7 +445,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="js/kader.js"></script>
+    <script src="/js/kader.js"></script>
   </body>
 
 </html>
