--- a/ws/football/src/main/resources/templates/kader.html
+++ b/ws/football/src/main/resources/templates/kader.html
@@ -37,7 +37,7 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="assets\foto-neuer.png">
+                <img src="/assets\foto-neuer.png">
               </div>
               <div class="tranding-slide-content">
                 <div class="tranding-slide-content-bottom">
@@ -52,7 +52,7 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-terStegen.png">
+                  <img src="/assets\foto-terStegen.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -68,7 +68,7 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-baumann.png">
+                  <img src="/assets\foto-baumann.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -83,7 +83,7 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-anton.png">
+                  <img src="/assets\foto-anton.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -98,7 +98,7 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-can.png">
+                  <img src="/assets\foto-can.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -113,7 +113,7 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-henrichs.png">
+                  <img src="/assets\foto-henrichs.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -128,7 +128,7 @@
            <!-- Slide-start -->
            <div class="swiper-slide tranding-slide">
             <div class="tranding-slide-img">
-              <img src="assets\foto-kimmich.png">
+              <img src="/assets\foto-kimmich.png">
             </div>
             <div class="tranding-slide-content">
               <div class="tranding-slide-content-bottom">
@@ -144,7 +144,7 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-koch.png">
+                  <img src="/assets\foto-koch.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -159,7 +159,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-mittelstädt.png">
+                  <img src="/assets\foto-mittelstädt.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -174,7 +174,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-raum.png">
+                  <img src="/assets\foto-raum.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -189,7 +189,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-rüdiger.png">
+                  <img src="/assets\foto-rüdiger.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -204,7 +204,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-schlotterbeck.png">
+                  <img src="/assets\foto-schlotterbeck.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -219,7 +219,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-tah.png">
+                  <img src="/assets\foto-tah.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -234,7 +234,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-andrich.png">
+                  <img src="/assets\foto-andrich.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -249,7 +249,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-führich.png">
+                  <img src="/assets\foto-führich.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -264,7 +264,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-gross.png">
+                  <img src="/assets\foto-gross.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -279,7 +279,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-gündogan.png">
+                  <img src="/assets\foto-gündogan.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -294,7 +294,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-kroos.png">
+                  <img src="/assets\foto-kroos.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -309,7 +309,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-musiala.png">
+                  <img src="/assets\foto-musiala.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -324,7 +324,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-sane.png">
+                  <img src="/assets\foto-sane.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -339,7 +339,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-wirtz.png">
+                  <img src="/assets\foto-wirtz.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -354,7 +354,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-beier.png">
+                  <img src="/assets\foto-beier.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -369,7 +369,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-füllkrug.png">
+                  <img src="/assets\foto-füllkrug.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -384,7 +384,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-havertz.png">
+                  <img src="/assets\foto-havertz.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -399,7 +399,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-müller.png">
+                  <img src="/assets\foto-müller.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
@@ -414,7 +414,7 @@
                <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
                 <div class="tranding-slide-img">
-                  <img src="assets\foto-undav.png">
+                  <img src="/assets/foto-undav.png">
                 </div>
                 <div class="tranding-slide-content">
                   <div class="tranding-slide-content-bottom">
