--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -46,7 +46,7 @@
                 <a href="#bayern" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="assets\stadion-bayern.png" class="image">
+        <img src="/assets\stadion-bayern.png" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -56,7 +56,7 @@
                 <a href="#dortmund" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="assets\stadion-dortmund.jpg" class="image">
+        <img src="/assets\stadion-dortmund.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -66,7 +66,7 @@
                 <a href="#hamburg" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="assets\stadion-hsv.jpg" class="image">
+        <img src="/assets\stadion-hsv.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -76,7 +76,7 @@
                 <a href="#frankfurt" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="assets\stadion-frankfurt.jpg" class="image">
+        <img src="/assets\stadion-frankfurt.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -86,7 +86,7 @@
                 <a href="#gelsenkirchen" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="assets\stadion-gelsenkirchen.png" class="image">
+        <img src="/assets\stadion-gelsenkirchen.png" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -96,7 +96,7 @@
                 <a href="#leipzig" class="button">Erfahre mehr</a>
             </div>
         </div>
-        <img src="assets\stadion-leipzig.jpeg" class="image">
+        <img src="/assets\stadion-leipzig.jpeg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -106,7 +106,7 @@
                 <a href="#düsseldorf" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="assets\stadion-dusseldorf2.jpg" class="image">
+        <img src="/assets\stadion-dusseldorf2.jpg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -116,7 +116,7 @@
                 <a href="#köln" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="assets\stadion-koeln.jpg" class="image">
+        <img src="/assets\stadion-koeln.jpg" class="image">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
