html/css/js Anpassungen

--- a/ws/football/src/main/resources/static/css/login.css
+++ b/ws/football/src/main/resources/static/css/login.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
+    background: url('http://localhost:8080/assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 
