--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -12,19 +12,19 @@
 </head>
 <body>
     <header class="header" id="header">
-        <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
+        <a href="/"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
             <i class="bx bx-x" id="close-menu"></i>
         </label>    
         <nav class="navbar" id="navbar">
-            <a href="index.html">Startseite</a>
-            <a href="kader.html">DFB-Kader</a>
-            <a href="stadien.html" style="color: #C1A875">Stadien</a>
-            <a href="ergebnisse.html">Ergebnisse</a>
-            <a href="forum.html">Forum</a>
-            <a href="login.html">Login</a>
+            <a href="/">Startseite</a>
+            <a href="/kader">DFB-Kader</a>
+            <a href="/stadien" style="color: #C1A875">Stadien</a>
+            <a href="/ergebnisse">Ergebnisse</a>
+            <a href="/forum">Forum</a>
+            <a href="/login">Login</a>
         </nav>
         </header>
    <div class="slider">
