--- a/ws/football/src/main/resources/templates/ergebnisse.html
+++ b/ws/football/src/main/resources/templates/ergebnisse.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
+        <a href="/"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
             <i class="bx bx-x" id="close-menu"></i>
         </label>    
         <nav class="navbar">
-            <a href="index.html">Startseite</a>
-            <a href="stadien.html">DFB-Kader</a>
-            <a href="stadien.html">Stadien</a>
-            <a href="ergebnisse.html" style="color: #C1A875">Ergebnisse</a>
-            <a href="forum.html">Forum</a>
-            <a href="login.html">Login</a>
+            <a href="/">Startseite</a>
+            <a href="/kader">DFB-Kader</a>
+            <a href="/stadien">Stadien</a>
+            <a href="/ergebnisse" style="color: #C1A875">Ergebnisse</a>
+            <a href="/forum">Forum</a>
+            <a href="/login">Login</a>
         </nav>
         </header>
         <div class="container">
