--- a/ws/football/src/main/resources/static/css/index.css
+++ b/ws/football/src/main/resources/static/css/index.css
@@ -442,7 +442,10 @@ text-align: center;
     background-color: black;
     margin-top: -5px;
     width: 100%;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 /* Newsletter Section */
