--- a/ws/football/src/main/resources/templates/forum.html
+++ b/ws/football/src/main/resources/templates/forum.html
@@ -12,21 +12,23 @@
 
     <body>
         <header class="header">
-            <a href="/"><img src="/assets/Logo.png" class="logo"></a>
-            <input type="checkbox" id="check">
-            <label for="check" class="menu">
-                <i class="bx bx-menu" id="icon-menu"></i>
-                <i class="bx bx-x" id="close-menu"></i>
-            </label>    
-            <nav class="navbar">
-                <a href="/">Startseite</a>
-                <a href="/kader">DFB-Kader</a>
-                <a href="/stadien">Stadien</a>
-                <a href="/ergebnisse">Ergebnisse</a>
-                <a href="/forum" style="color: #C1A875">Forum</a>
-                <a href="/login">Login</a>
-            </nav>
-            </header>
+    <a href="/"><img src="/assets/Logo.png" class="logo"></a>
+    <input type="checkbox" id="check">
+    <label for="check" class="menu">
+        <i class="bx bx-menu" id="icon-menu"></i>
+        <i class="bx bx-x" id="close-menu"></i>
+    </label>
+    <nav class="navbar">
+        <a href="/">Startseite</a>
+        <a href="/kader">DFB-Kader</a>
+        <a href="/stadien">Stadien</a>
+        <a href="/ergebnisse">Ergebnisse</a>
+        <a href="/forum" style="color: #C1A875">Forum</a>
+        <a href="/login" id="login-link">Login</a>
+        <span id="auth-status"><p></p></span>
+    </nav>
+</header>
+
         <div class="container">
             <aside class="sidebar">
                     <input type="checkbox" id="check2">
@@ -58,31 +60,31 @@
                     <li class="nav-link">
                         <a href="#1" onclick="openTopic(1); markActiveLink(1)">
                             <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
-                            <span class="text nav-text">Topic 1</span>
+                            <span class="text nav-text">DE Spiele</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#2" onclick="openTopic(2); markActiveLink(2)">
                             <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
-                            <span class="text nav-text">Topic 2</span>
+                            <span class="text nav-text">Andere Spiele</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#3" onclick="openTopic(3); markActiveLink(3)">
                             <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
-                            <span class="text nav-text">Topic 3</span>
+                            <span class="text nav-text">Strategie</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#4" onclick="openTopic(4); markActiveLink(4)">
                             <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
-                            <span class="text nav-text">Topic 4</span>
+                            <span class="text nav-text">Fans</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#5" onclick="openTopic(5); markActiveLink(5)">
                             <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
-                            <span class="text nav-text">Topic 5</span>
+                            <span class="text nav-text">Whatever</span>
                         </a>
                     </li>
                     <!-- <div class="strich">
