--- a/ws/football/src/main/resources/templates/login.html
+++ b/ws/football/src/main/resources/templates/login.html
@@ -29,11 +29,11 @@
         <form class="form-box login" id="loginForm">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" name="username" placeholder="Benutzername" required>
+                <input type="text" name="username" placeholder="Benutzername" autocomplete="off" required value="">
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" name="password" placeholder="Passwort" required>
+                <input type="password" name="password" placeholder="Passwort" autocomplete="off" required value="">
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <button type="submit" class="btn">Login</button>
@@ -45,15 +45,15 @@
         <form class="form-box register" id="registerForm">
             <h1>Registrieren</h1>
             <div class="input-box">
-                <input type="text" name="username" placeholder="Benutzername" required>
+                <input type="text" name="username" placeholder="Benutzername" autocomplete="off" required value="">
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="email" name="email" placeholder="Email" required>
+                <input type="email" name="email" placeholder="Email" autocomplete="off" required value="">
                 <i class='bx bxs-envelope' style='color:#ffffff'></i>
             </div>
             <div class="input-box">
-                <input type="password" name="password" placeholder="Passwort" required>
+                <input type="password" name="password" placeholder="Passwort" autocomplete="off" required minlength="8" value="">
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="checkbox">
