--- a/ws/football/src/main/resources/static/css/index.css
+++ b/ws/football/src/main/resources/static/css/index.css
@@ -26,9 +26,9 @@ main {
     height: 110px;
     border: 2px solid;
     border-color: #C1A875;
-  }
-  
-  .header::before {
+}
+
+.header::before {
     content: "";
     position: absolute;
     top: 0;
@@ -38,100 +38,107 @@ main {
     background: rgb(255, 255, 255, .15);
     backdrop-filter: blur(50px);
     z-index: -1;
-  }
-  
-  .header a {
-    width: 125px; 
+}
+
+.header a {
+    width: 125px;
     height: 83px;
-  }
-  
-  .logo {
+}
+
+.logo {
     width: 100%;
-  }
-  
-  
-  .navbar {
-  display: block;
-  margin-right: 20px;
-  }
-  
-  .navbar a {
+}
+
+
+.navbar {
+    display: block;
+    margin-right: 20px;
+}
+
+.navbar a {
     position: relative;
-  font-size: 1.15rem;
-  color: white;
-  text-decoration: none;
-  font-weight: 500;
-  margin-left: 2.5rem;
-  transition: .3s ease;
-  font-size: 20px;
-  
-  }
-  
-  .navbar a:hover {
-  color: #C1A875;
-  }
-  
-  #check {
-  display: none;
-  }
-  
-  .menu {
-  position: absolute;
-  right: 5%;
-  color: white;
-  font-size: 2rem;
-  cursor: pointer;
-  display: none;
-  }
-  
-  @media (max-width: 1160px) {
-  .header {
-    padding: 1.3rem 5%;
-    background-color: transparent;
-  }
-  }
-  
-  @media (max-width: 1030px) {
-  .menu {
-    display: inline-flex;
-  }
-  #check:checked ~ .menu #icon-menu {
-  display: none;
-  }
-  .menu #close-menu {
-  display: none;
-  }
-  #check:checked ~ .menu #close-menu {
-  display: block;
-  }
-  .navbar {
-  position: absolute;
-  top: 100%;
-  left: 0%;
-  width: 100%;
-  height: 0;
-  background: rgb(255, 255, 255, .15);
-  backdrop-filter: blur(50px);
-  overflow: hidden;
-  transition: .2s ease;
-  
-  }
-  #check:checked ~ .navbar {
-  height: 23rem;
-  }
-  .navbar a {
-  display: block;
-  height: 35px;
-  margin: 1.5rem auto;
-  text-align: center;
-  
-  font-size: 20px;
-  
-  }
-  #check:checked ~ .navbar a{
-    transform: translateY(0);
-  }
-  }
+    font-size: 1.15rem;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 2.5rem;
+    transition: .3s ease;
+    font-size: 20px;
+
+}
+
+.navbar a:hover {
+    color: #C1A875;
+}
+
+#check {
+    display: none;
+}
+
+.menu {
+    position: absolute;
+    right: 5%;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 1160px) {
+    .header {
+        padding: 1.3rem 5%;
+        background-color: transparent;
+    }
+}
+
+@media (max-width: 1030px) {
+    .menu {
+        display: inline-flex;
+    }
+
+    #check:checked~.menu #icon-menu {
+        display: none;
+    }
+
+    .menu #close-menu {
+        display: none;
+    }
+
+    #check:checked~.menu #close-menu {
+        display: block;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0%;
+        width: 100%;
+        height: 0;
+        background: rgb(255, 255, 255, .15);
+        backdrop-filter: blur(50px);
+        overflow: hidden;
+        transition: .2s ease;
+
+    }
+
+    #check:checked~.navbar {
+        height: 23rem;
+    }
+
+    .navbar a {
+        display: block;
+        height: 35px;
+        margin: 1.5rem auto;
+        text-align: center;
+
+        font-size: 20px;
+
+    }
+
+    #check:checked~.navbar a {
+        transform: translateY(0);
+    }
+}
 
 .mannschaft {
     background-color: black;
@@ -243,6 +250,7 @@ main {
     top: 465px;
     margin-left: 10%;
 }
+
 .fotowand .trainer {
     position: absolute;
     width: 32%;
@@ -266,6 +274,7 @@ main {
     background-color: black;
     transform: rotate(180deg);
 }
+
 /* Bereich für die Spiele von Deutschland */
 /*.ergebnisse {
     position: relative;
@@ -278,22 +287,26 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-   
+
 }
-.ergebnisse h1{
+
+.ergebnisse h1 {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .maincontainer {
     width: 75%;
 }
+
 .maincontainer h1 {
     font-size: 50px;
     font-weight: 600;
     margin-top: 50px;
 }
+
 .boardcontainer {
     width: 100%;
     display: flex;
@@ -302,33 +315,41 @@ main {
     align-items: center;
     justify-content: center;
 }
+
 .boardcontainer p1 {
     margin-top: 20px;
     font-size: 19px;
     font-weight: 600;
 }
+
 .boardcontainer p2 {
     margin-top: 20px;
     font-size: 19px;
     font-weight: 400;
 }
+
 .matchcontainer {
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-template-columns: repeat(3, 1fr); /* maximal 3 Spalten in einer Zeile */
+    grid-template-columns: repeat(3, 1fr);
+    /* maximal 3 Spalten in einer Zeile */
     grid-gap: 20px;
     margin-top: 20px;
 }
+
 /* Responsive */
 @media (max-width: 1540px) {
     .matchcontainer {
-        grid-template-columns: repeat(1, 1fr); /* maximal 2 Spalten in einer Zeile */
+        grid-template-columns: repeat(1, 1fr);
+        /* maximal 2 Spalten in einer Zeile */
     }
 }
+
 @media (max-width: 1100px) {
     .matchcontainer {
-        grid-template-columns: repeat(1, 1fr); /* maximal 1 Spalten in einer Zeile */
+        grid-template-columns: repeat(1, 1fr);
+        /* maximal 1 Spalten in einer Zeile */
     }
 }
 
@@ -341,11 +362,13 @@ main {
     border-color: lightgrey;
     margin-left: -10%;
 }
+
 .group {
     width: 100%;
     padding: 30px;
     height: 50px;
 }
+
 .infos {
     display: flex;
     width: 100%;
@@ -355,46 +378,55 @@ main {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
 .infos-left {
     display: flex;
     flex-direction: column;
     width: 70%;
     gap: 10px;
 }
+
 .infos-strich {
     height: 80%;
     margin-top: 14px;
     width: 1px;
     background-color: lightgray;
 }
+
 .infos-right {
     width: 30%;
 }
+
 .team1 {
     display: flex;
     height: 100%;
     align-items: center;
-    
+
 }
+
 .team2 {
     display: flex;
     height: 100%;
     align-items: center;
-    
+
 
 }
+
 .flag {
     width: 40px;
     height: 40px;
 }
+
 .flag img {
     width: 100%;
     height: 100%;
     border-radius: 200px;
 }
+
 .team {
     width: 150px;
 }
+
 .team p {
     font-size: 19px;
     font-weight: 500;
@@ -404,20 +436,23 @@ main {
 .score p {
     font-size: 21px;
     font-weight: 500;
-    
+
 }
+
 .score {
     width: 46px;
     text-align: center;
     justify-content: center;
 }
+
 .time {
     height: 100%;
-display: flex;
-align-items: center; 
-justify-content: center; 
-text-align: center; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
+
 .time p {
     margin: 0;
 }
