Fix Authentification von Lorenz

--- a/ws/football/src/main/resources/templates/login.html
+++ b/ws/football/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <div class="wrapper">
-        <form class="form-box login" id="loginForm">
+        <form method="post" action="/login" class="form-box login" >
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" name="username" placeholder="Benutzername" autocomplete="off" required value="">
