--- a/ws/football/src/main/resources/static/css/index.css
+++ b/ws/football/src/main/resources/static/css/index.css
@@ -483,7 +483,7 @@ main {
     text-align: center;
 }
 
-/* Newsletter Section */
+/* Newsletter Bereich */
 .background {
     position: relative;
     width: 100%;
@@ -559,18 +559,15 @@ main {
     color: black;
 }
 
+/*Fußzeile*/
 .footer {
     position: relative;
     width: 100%;
     height: 75px;
-    /* Höhe  */
     background-color: #333;
-    /* Hintergrundfarbe  */
     color: #fff;
-    /* Schriftfarbe */
     text-align: center;
     padding: 15px 0;
-    /* Platz */
     flex-shrink: 0;
     bottom: 0;
     z-index: 200;
