--- a/ws/football/src/main/resources/templates/ergebnisse.html
+++ b/ws/football/src/main/resources/templates/ergebnisse.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/ergebnisse.css">
 </head>
 <body>
+
+     <!--Navigationsbar-->
     <header class="header">
         <a href="/"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
@@ -25,6 +27,13 @@
             <a href="/login">Login</a>
         </nav>
         </header>
+
+        <!--Container für die Ergebnisse-->
+        <!--Manuelle Notlösung, da API für EURO24 nur kostenpflichtig 
+            nutzbar war; kostenlose Testversion hatte bei uns funktioniert,
+            bei der erneuten Aufnahme hat uns ein Teil des Codes gefehlt,
+            seitdem haben wir die API leider nicht mehr eingebunden bekommen 
+        -->
         <div class="container">
             <div class="maincontainer">
                 <h1>Spiele & Ergebnisse</h1>
