--- a/ws/football/src/main/resources/templates/kader.html
+++ b/ws/football/src/main/resources/templates/kader.html
@@ -14,6 +14,7 @@
   </head>
 
   <body>
+     <!--Navigationsbar-->
     <header class="header">
         <a href="/"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
@@ -29,7 +30,9 @@
             <a href="/forum">Forum</a>
             <a href="/login">Login</a>
         </nav>
-        </header>
+    </header>
+
+    <!--Slideshow mit allen Spielern-->
     <section id="tranding">
       <div class="container">
         <div class="swiper tranding-slider">
