--- a/ws/football/src/main/resources/templates/profile.html
+++ b/ws/football/src/main/resources/templates/profile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/profile.css">
 </head>
 <body>
+    <!--Navigationsbar-->
     <header class="header">
         <a href="/"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
@@ -25,6 +26,8 @@
             <a href="/login" style="color: #C1A875">Login</a>
         </nav>
     </header>
+
+    <!--Profilbox für Änderungen-->
     <div class="wrapper">
         <div class="box">
             <div class="profilepicture">
