--- a/ws/football/src/main/resources/static/css/ergebnisse.css
+++ b/ws/football/src/main/resources/static/css/ergebnisse.css
@@ -1,138 +1,122 @@
-* {
-    font-family: "Rubik", sans-serif;
-padding: 0;
-margin:0;
-box-sizing: border-box;
-} 
-
-body {
-    background-color: #f5f5f5;
+    * {
+        font-family: "Rubik", sans-serif;
+        padding: 0;
+        margin:0;
+        box-sizing: border-box;
+    } 
+    body {
+        background-color: #f5f5f5;
     }
 
-/* Navigantionsbar */
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1.3rem 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-    height: 110px;
-    border: 2px solid;
-    border-color: #C1A875;
-  }
-  
-  .header::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(255, 255, 255, .15);
-    backdrop-filter: blur(50px);
-    z-index: -1;
-  }
-  
-  .header a {
-    width: 125px; 
-    height: 83px;
-  }
-  
-  .logo {
-    width: 100%;
-  }
-  
-  
-  .navbar {
-  display: block;
-  margin-right: 20px;
-  }
-  
-  .navbar a {
-    position: relative;
-  font-size: 1.15rem;
-  color: black;
-  text-decoration: none;
-  font-weight: 500;
-  margin-left: 2.5rem;
-  transition: .3s ease;
-  font-size: 20px;
-  
-  }
-  
-  .navbar a:hover {
-  color: #C1A875;
-  }
-  
-  #check {
-  display: none;
-  }
-  
-  .menu {
-  position: absolute;
-  right: 5%;
-  color: black;
-  font-size: 2rem;
-  cursor: pointer;
-  display: none;
-  }
-  
-  @media (max-width: 1160px) {
-  .header {
-    padding: 1.3rem 5%;
-    background-color: transparent;
-  }
-  }
-  
-  @media (max-width: 1030px) {
-  .menu {
-    display: inline-flex;
-  }
-  #check:checked ~ .menu #icon-menu {
-  display: none;
-  }
-  .menu #close-menu {
-  display: none;
-  }
-  #check:checked ~ .menu #close-menu {
-  display: block;
-  }
-  .navbar {
-  position: absolute;
-  top: 100%;
-  left: 0%;
-  width: 100%;
-  height: 0;
-  background: rgb(255, 255, 255, .15);
-  backdrop-filter: blur(50px);
-  overflow: hidden;
-  transition: .2s ease;
-  
-  }
-  #check:checked ~ .navbar {
-  height: 23rem;
-  }
-  .navbar a {
-  display: block;
-  height: 35px;
-  margin: 1.5rem auto;
-  text-align: center;
-  
-  font-size: 20px;
-  
-  }
-  #check:checked ~ .navbar a{
-    transform: translateY(0);
-  }
-  }
+    /* Navigantionsbar */
+    .header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 1.3rem 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 100;
+        height: 110px;
+        border: 2px solid;
+        border-color: #C1A875;
+    }
+    .header::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgb(255, 255, 255, .15);
+        backdrop-filter: blur(50px);
+        z-index: -1;
+    }
+    .header a {
+        width: 125px; 
+        height: 83px;
+    }
+    .logo {
+        width: 100%;
+    }
+    .navbar {
+    display: block;
+    margin-right: 20px;
+    }
+    .navbar a {
+        position: relative;
+        font-size: 1.15rem;
+        color: black;
+        text-decoration: none;
+        font-weight: 500;
+        margin-left: 2.5rem;
+        transition: .3s ease;
+        font-size: 20px;
+    }
+    
+    .navbar a:hover {
+        color: #C1A875;
+    }
+    #check {
+        display: none;
+    }
+    .menu {
+        position: absolute;
+        right: 5%;
+        color: black;
+        font-size: 2rem;
+        cursor: pointer;
+        display: none;
+    }
+    /*Responsive Design Navigationsbar*/
+    @media (max-width: 1160px) {
+    .header {
+        padding: 1.3rem 5%;
+        background-color: transparent;
+    }
+    }
+    @media (max-width: 1030px) {
+    .menu {
+        display: inline-flex;
+    }
+    #check:checked ~ .menu #icon-menu {
+        display: none;
+    }
+    .menu #close-menu {
+        display: none;
+    }
+    #check:checked ~ .menu #close-menu {
+        display: block;
+    }
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0%;
+        width: 100%;
+        height: 0;
+        background: rgb(255, 255, 255, .15);
+        backdrop-filter: blur(50px);
+        overflow: hidden;
+        transition: .2s ease;
+    }
+    #check:checked ~ .navbar {
+        height: 23rem;
+    }
+    .navbar a {
+        display: block;
+        height: 35px;
+        margin: 1.5rem auto;
+        text-align: center;
+        font-size: 20px;
+    }
+    #check:checked ~ .navbar a{
+        transform: translateY(0);
+    }
+    }
 
-
-
-
+  /*Container für die Ergebnisse*/
     .container {
         width: 100%;
         display: flex;
@@ -179,10 +163,9 @@ body {
     }
     @media (max-width: 1100px) {
         .matchcontainer {
-            grid-template-columns: repeat(1, 1fr); /* maximal 1 Spalten in einer Zeile */
+            grid-template-columns: repeat(1, 1fr); /* maximal 1 Spalte in einer Zeile */
         }
     }
-   
     .match {
         background-color: white;
         width: 100%;
@@ -224,14 +207,11 @@ body {
         display: flex;
         height: 100%;
         align-items: center;
-        
     }
     .team2 {
         display: flex;
         height: 100%;
         align-items: center;
-        
-
     }
     .flag {
         width: 40px;
@@ -250,11 +230,9 @@ body {
         font-weight: 500;
         padding-left: 10px;
     }
-   
     .score p {
         font-size: 21px;
         font-weight: 500;
-        
     }
     .score {
         width: 46px;
@@ -263,10 +241,10 @@ body {
     }
     .time {
         height: 100%;
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
-    text-align: center; 
+        display: flex;
+        align-items: center; 
+        justify-content: center; 
+        text-align: center; 
     }
     .time p {
         margin: 0;
