--- a/ws/football/src/main/resources/static/css/kader.css
+++ b/ws/football/src/main/resources/static/css/kader.css
@@ -7,7 +7,6 @@
   list-style-type: none;
   text-decoration: none;
   font-family: "Rubik", sans-serif;
-
 }
 
 /* Navigantionsbar */
@@ -25,7 +24,6 @@
   border: 2px solid;
   border-color: #C1A875;
 }
-
 .header::before {
   content: "";
   position: absolute;
@@ -37,169 +35,145 @@
   backdrop-filter: blur(50px);
   z-index: -1;
 }
-
 .header a {
   width: 125px; 
   height: 83px;
 }
-
 .logo {
   width: 100%;
 }
-
-
 .navbar {
-display: block;
-margin-right: 20px;
+  display: block;
+  margin-right: 20px;
 }
-
 .navbar a {
   position: relative;
-font-size: 1.15rem;
-color: black;
-text-decoration: none;
-font-weight: 500;
-margin-left: 2.5rem;
-transition: .3s ease;
-font-size: 20px;
+  font-size: 1.15rem;
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 2.5rem;
+  transition: .3s ease;
+  font-size: 20px;
 
 }
-
 .navbar a:hover {
-color: #C1A875;
+  color: #C1A875;
 }
-
 #check {
-display: none;
+  display: none;
 }
-
 .menu {
-position: absolute;
-right: 5%;
-color: black;
-font-size: 2rem;
-cursor: pointer;
-display: none;
+  position: absolute;
+  right: 5%;
+  color: black;
+  font-size: 2rem;
+  cursor: pointer;
+  display: none;
 }
-
+/*Responsive Design Navigationsbar*/
 @media (max-width: 1160px) {
 .header {
   padding: 1.3rem 5%;
   background-color: transparent;
 }
 }
-
 @media (max-width: 1023px) {
 .menu {
   display: inline-flex;
 }
 #check:checked ~ .menu #icon-menu {
-display: none;
+  display: none;
 }
 .menu #close-menu {
-display: none;
+  display: none;
 }
 #check:checked ~ .menu #close-menu {
-display: block;
+  display: block;
 }
 .navbar {
-position: absolute;
-top: 100%;
-left: 0%;
-width: 100%;
-height: 0;
-background: rgb(255, 255, 255, .15);
-backdrop-filter: blur(50px);
-overflow: hidden;
-transition: .2s ease;
-
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  height: 0;
+  background: rgb(255, 255, 255, .15);
+  backdrop-filter: blur(50px);
+  overflow: hidden;
+  transition: .2s ease;
 }
 #check:checked ~ .navbar {
-height: 23rem;
+  height: 23rem;
 }
 .navbar a {
-display: block;
-height: 35px;
-margin: 1.5rem auto;
-text-align: center;
-
-font-size: 20px;
-
+  display: block;
+  height: 35px;
+  margin: 1.5rem auto;
+  text-align: center;
+  font-size: 20px;
 }
 #check:checked ~ .navbar a{
   transform: translateY(0);
 }
 }
 
+/*Slideshow*/
 ::-webkit-scrollbar {
   width: 1.3rem;
 }
-
 ::-webkit-scrollbar-thumb {
   border-radius: 1rem;
   background: #797979;
   transition: all 0.5s ease-in-out;
 }
-
 ::-webkit-scrollbar-thumb:hover {
   background: #222224;
 }
-
 ::-webkit-scrollbar-track {
   background: #f9f9f9;
 }
-
 body {
   font-size: 1.6rem;
   background-color: #f5f5f5;
   position: fixed;
 }
-
 .container {
   max-width: 124rem;
   padding: 0 1rem;
   margin: 0 auto;
 }
-
 .text-center {
   text-align: center;
 }
-
 .section-heading {
   font-size: 3rem;
   color: var(--primary);
   padding: 2rem 0;
 }
-
 #tranding {
   padding: 4rem 0;
   margin-top: 45px;
 }
-
 @media (max-width:1440px) {
   #tranding {
     padding: 7rem 0;
   }
 }
-
 #tranding .tranding-slider {
   height: 52rem;
   padding: 2rem 0;
   position: relative;
 }
-
 @media (max-width:500px) {
   #tranding .tranding-slider {
     height: 45rem;
   }
 }
-
 .tranding-slide {
   width: 37rem;
   height: 42rem;
   position: relative;
 }
-
 @media (max-width:500px) {
   .tranding-slide {
     width: 28rem !important;
@@ -210,16 +184,13 @@ body {
     height: 36rem !important;
   }
 }
-
 .tranding-slide .tranding-slide-img img {
   width: 37rem;
   height: 42rem;
   border-radius: 2rem;
   border: 1.5px solid;
- 
   object-fit: cover;
 }
-
 .tranding-slide .tranding-slide-content {
   position: absolute;
   left: 0;
@@ -227,7 +198,6 @@ body {
   right: 0;
   bottom: 0;
 }
-
 .tranding-slide-content .food-price {
     text-align: center;
   background: #C1A875;
@@ -235,7 +205,6 @@ body {
   width: 110%;
   color: white;
 }
-
 .tranding-slide-content .tranding-slide-content-bottom {
   position: absolute;
   bottom: 2rem;
@@ -243,18 +212,13 @@ body {
   text-align: center;
   color: #C1A875;
 }
-
-
-
 .rating ion-icon {
   color: var(--primary);
 }
-
 .swiper-slide-shadow-left,
 .swiper-slide-shadow-right {
   display: none;
 }
-
 .tranding-slider-control {
   position: relative;
   bottom: 2rem;
@@ -262,7 +226,6 @@ body {
   align-items: center;
   justify-content: center;
 }
-
 .tranding-slider-control .swiper-button-next {
   left: 63% !important;
   transform: translateX(-25%) !important;
@@ -274,35 +237,30 @@ body {
     z-index: 1000;
     margin-top: -37px;
 }
-
 @media (max-width:990px) {
   .tranding-slider-control .swiper-button-next {
     left: 70% !important;
     transform: translateX(-70%) !important;
   }
 }
-
 @media (max-width:450px) {
   .tranding-slider-control .swiper-button-next {
     left: 80% !important;
     transform: translateX(-80%) !important;
   }
 }
-
 @media (max-width:990px) {
   .tranding-slider-control .swiper-button-prev {
     left: 30% !important;
     transform: translateX(-30%) !important;
   }
 }
-
 @media (max-width:450px) {
   .tranding-slider-control .swiper-button-prev {
     left: 20% !important;
     transform: translateX(-20%) !important;
   }
 }
-
 .tranding-slider-control .slider-arrow {
     background: white;
     width: 3.5rem;
@@ -312,30 +270,20 @@ body {
     transform: translateX(-42%);
     filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
 }
-
 .tranding-slider-control .slider-arrow ion-icon {
   font-size: 2rem;
   color: #222224;
 }
-
 .tranding-slider-control .slider-arrow::after {
   content: '';
-  
 }
-
 .tranding-slider-control .swiper-pagination {
   position: relative;
-
   bottom: 1rem;
-  
 }
-
 .tranding-slider-control .swiper-pagination .swiper-pagination-bullet {
   filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
-  
 }
-
 .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
   background: #C1A875;
-  
 }
