--- a/ws/football/src/main/resources/static/css/login.css
+++ b/ws/football/src/main/resources/static/css/login.css
@@ -13,7 +13,6 @@ body {
     background: url('http://localhost:8080/assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
     background-size: cover;
     background-position: center;
-
 }
 
 /* Navigantionsbar */
@@ -53,39 +52,37 @@ body {
     width: 100%;
   }
   
-  
   .navbar {
-  display: block;
-  margin-right: 20px;
+    display: block;
+    margin-right: 20px;
   }
   
   .navbar a {
     position: relative;
-  font-size: 1.15rem;
-  color: white;
-  text-decoration: none;
-  font-weight: 500;
-  margin-left: 2.5rem;
-  transition: .3s ease;
-  font-size: 20px;
-  
+    font-size: 1.15rem;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 2.5rem;
+    transition: .3s ease;
+    font-size: 20px;
   }
   
   .navbar a:hover {
-  color: #C1A875;
+    color: #C1A875;
   }
   
   #check {
-  display: none;
+    display: none;
   }
   
   .menu {
-  position: absolute;
-  right: 5%;
-  color: white;
-  font-size: 2rem;
-  cursor: pointer;
-  display: none;
+    position: absolute;
+    right: 5%;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
   }
   
   @media (max-width: 1160px) {
@@ -100,161 +97,168 @@ body {
     display: inline-flex;
   }
   #check:checked ~ .menu #icon-menu {
-  display: none;
+    display: none;
   }
   .menu #close-menu {
-  display: none;
+    display: none;
   }
   #check:checked ~ .menu #close-menu {
-  display: block;
+    display: block;
   }
   .navbar {
-  position: absolute;
-  top: 100%;
-  left: 0%;
-  width: 100%;
-  height: 0;
-  background: rgb(255, 255, 255, .15);
-  backdrop-filter: blur(50px);
-  overflow: hidden;
-  transition: .2s ease;
-  
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    width: 100%;
+    height: 0;
+    background: rgb(255, 255, 255, .15);
+    backdrop-filter: blur(50px);
+    overflow: hidden;
+    transition: .2s ease;
   }
   #check:checked ~ .navbar {
-  height: 23rem;
+    height: 23rem;
   }
   .navbar a {
-  display: block;
-  height: 35px;
-  margin: 1.5rem auto;
-  text-align: center;
-  
-  font-size: 20px;
-  
+    display: block;
+    height: 35px;
+    margin: 1.5rem auto;
+    text-align: center;
+    font-size: 20px;
   }
   #check:checked ~ .navbar a{
     transform: translateY(0);
   }
-  }
+}
 
+/*Login- und Registrationsbox*/
 .wrapper {
-display: flex;
-position: relative;
-width: 420px;
-height: 420px;
-background: transparent;
-border: 2px solid rgba(255,255,255, .2);
-backdrop-filter: blur(20px);
-color: #fff;
-border-radius: 10px;
-padding: 30px 40px;
-align-items: center;
-justify-content: center;
-transition: height .2s ease;
-overflow: hidden;
+  display: flex;
+  position: relative;
+  width: 420px;
+  height: 420px;
+  background: transparent;
+  border: 2px solid rgba(255,255,255, .2);
+  backdrop-filter: blur(20px);
+  color: #fff;
+  border-radius: 10px;
+  padding: 30px 40px;
+  align-items: center;
+  justify-content: center;
+  transition: height .2s ease;
+  overflow: hidden;
 }
 
 .wrapper.active {
-height: 520px;
+  height: 520px;
 }
 
 .form-box {
-flex: 1;
+  flex: 1;
 }
 
 .wrapper h1 {
-font-size: 36px;
-text-align: center;
+  font-size: 36px;
+  text-align: center;
 }
+
 .wrapper .input-box {
-position: relative;
-width: 100%;
-height: 50px;
-margin: 30px 0;
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
 }
+
 .input-box input {
-width: 100%;
-height: 100%;
-background: transparent;
-border: none;
-outline: none;
-border: 2px solid rgba(255,255,255, .2);
-border-radius: 40px;
-font-size: 16px;
-color: #fff;
-padding: 20px 45px 20px 20px;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255,255,255, .2);
+  border-radius: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px 45px 20px 20px;
 }
+
 .input-box input::placeholder {
-color: #fff;
+  color: #fff;
 }
+
 .input-box i {
-position: absolute;
-right: 20px;
-top: 50%;
-transform: translateY(-50%);
-font-size: 20px;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
 }
+
 .wrapper .btn {
-width: 100%;
-height: 45px;
-background: #fff;
-border: none;
-outline: none;
-border-radius: 40px;
-box-shadow: 0 0 10px rgba(0,0,0, .1);
-cursor: pointer;
-font-size: 16px;
-color: #333;
-font-weight: 600;
+  width: 100%;
+  height: 45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0,0,0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
 }
+
 .wrapper .link {
-font-size: 14.5px;
-text-align: center;
-margin: 20px 0 15px;
+  font-size: 14.5px;
+  text-align: center;
+  margin: 20px 0 15px;
 }
 
 .link p a {
-color: #fff;
-text-decoration: none;
-font-weight: 600;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
 }
+
 .link p a:hover {
-text-decoration: underline;
+  text-decoration: underline;
 }
 
 .wrapper .form-box.login {
-transition: transform .18s ease;
-transform: translateX(0);
+  transition: transform .18s ease;
+  transform: translateX(0);
 }
 
 .wrapper.active .form-box.login {
-transition: none;
-transform: translateX(-400px);
+  transition: none;
+  transform: translateX(-400px);
 }
 
 .wrapper .form-box.register {
-position: absolute;
-transition: none;
-transform: translateX(400px);
+  position: absolute;
+  transition: none;
+  transform: translateX(400px);
 }
 
 .wrapper.active .form-box.register {
-transition: transform .18s ease;
-transform: translateX(0);
+  transition: transform .18s ease;
+  transform: translateX(0);
 }
 
 .checkbox {
-font-size: .9em;
-color: #fff;
-font-weight: 500;
-margin: -15px 0 15px;
-display: flex;
-justify-content: space-between;
+  font-size: .9em;
+  color: #fff;
+  font-weight: 500;
+  margin: -15px 0 15px;
+  display: flex;
+  justify-content: space-between;
 }
+
 .checkbox label input {
-accent-color: #fff;
-text-decoration: none;
+  accent-color: #fff;
+  text-decoration: none;
 }
+
 .checkbox-warning {
-color: #C1A875;
+  color: #C1A875;
 }
