--- a/ws/football/src/main/resources/static/css/profile.css
+++ b/ws/football/src/main/resources/static/css/profile.css
@@ -13,7 +13,6 @@ body {
     background: url('http://localhost:8080/assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
     background-size: cover;
     background-position: center;
-
 }
 
 /* Navigantionsbar */
@@ -53,7 +52,6 @@ body {
     width: 100%;
 }
 
-
 .navbar {
     display: block;
     margin-right: 20px;
@@ -68,7 +66,6 @@ body {
     margin-left: 2.5rem;
     transition: .3s ease;
     font-size: 20px;
-
 }
 
 .navbar a:hover {
@@ -99,19 +96,15 @@ body {
     .menu {
         display: inline-flex;
     }
-
     #check:checked~.menu #icon-menu {
         display: none;
     }
-
     .menu #close-menu {
         display: none;
     }
-
     #check:checked~.menu #close-menu {
         display: block;
     }
-
     .navbar {
         position: absolute;
         top: 100%;
@@ -122,28 +115,23 @@ body {
         backdrop-filter: blur(50px);
         overflow: hidden;
         transition: .2s ease;
-
     }
-
     #check:checked~.navbar {
         height: 23rem;
     }
-
     .navbar a {
         display: block;
         height: 35px;
         margin: 1.5rem auto;
         text-align: center;
-
         font-size: 20px;
-
     }
-
     #check:checked~.navbar a {
         transform: translateY(0);
     }
 }
 
+/*Profilbox*/
 .wrapper {
     display: flex;
     position: relative;
@@ -190,7 +178,6 @@ body {
     width: 100%;
     height: 50px;
     margin: 48px 0;
-
 }
 
 .input-container input {
